# TreeSet

./: .clang-tidy  .clangd  CMakeLists.txt  README.md
.github/workflows/: cpp.yml
.semgrep/: .semgrepignore
.semgrep/rules/: correctness.yml  memory-safety.yml  security.yml
docs_doxy/: Doxyfile.in
docs_sphinx/: Doxyfile.in  conf.py  index.rst
docs_sphinx/api/: cpp_doxygen_sphinx.rst  index.rst
include/: TreeSet.hpp  TreeSetOps.hpp
include/detail/: Iterator.tpp  TreeSet.tpp  TreeSetOps.tpp
src/: TreeSet.cpp  main.cpp
test/: unittest.cpp
